# OTUS_Prof_DZ_03

./: Allocate.cpp  CMakeLists.txt  README.md
.github/workflows/: Allocate.yml  Allocate_act.yml
Allocator/: Alloc.h
Conteiners/: List.h
test/: Allocate_gtest.cpp
